--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <script src="base.js"></script>
 	</head>
 	<body id="sanity-check">
-    <input type="text" placeholder="search gifs">
+    <input type="text" placeholder="search gifs" id="search">
+    <div class="poweredBy">
+    <img src="images/Poweredby_100px-Black_VertText.png">
+    </div>
 	</body>
 </html>
